<resources>
    <string name="app_name">Lyrics Lover</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Songs</string>
    <string name="tab_text_2">Artists</string>
    <string name="tab_text_3">Albums</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="artwork_description">Album artwork</string>
    <string name="artist_description">Artist avatar</string>
    <string name="background_description">Blurred artwork used as background</string>

    <string name="hint_title">Song title</string>
    <string name="hint_artist">Artist</string>
    <string name="hint_artist_name">Artist name</string>
    <string name="hint_album">Album</string>
    <string name="hint_album_title">Album title</string>
    <string name="hint_lyrics">Lyrics</string>
    <string name="hint_year">Release year</string>
    <string name="hint_artwork">Add artwork</string>

    <string name="textView_numberOfTracks">%1$d song(s)</string>
    <string name="textView_numberOfAlbums">%1$d album(s)</string>
    <string name="textView_year">yyyy</string>
    <string name="textView_updatedAt">Song details updated at: %1$s</string>

    <string name="button_label_save">Save</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="button_label_ok">OK</string>


    <string name="dialog_title_newArtist">Add new artist</string>
    <string name="dialog_title_newAlbum">Add new album</string>

    <string name="error_empty_artistName">Artist name should not be empty!</string>
    <string name="error_empty_albumName">Album title should not be empty!</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts."
    </string>


    <string name="image_url">"https://tuanl-sssf.jelastic.metropolia.fi/%1$s</string>

</resources>
