<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:backgroundTintMode="screen">

    <ImageView
            android:id="@+id/imageView_artwork"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/artwork_description"
            android:elevation="4dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/artwork_placeholder"/>
    <TextView
            android:id="@+id/textView_albumTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#9A000000"
            android:backgroundTintMode="add"
            android:elevation="4dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/primary_text_dark"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_artwork"
            app:layout_constraintEnd_toEndOf="@+id/imageView_artwork"
            app:layout_constraintStart_toStartOf="@+id/imageView_artwork" android:text="@string/hint_album"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/imageView_artwork"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:id="@+id/linearLayout">
        <TextView
                android:text="@string/hint_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_artist"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textStyle="italic"
                android:textColor="@color/colorAccent"/>
        <View
                android:id="@+id/year_artist_divider"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="?android:attr/listDivider"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
        <TextView
                android:text="@string/textView_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_year"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textStyle="italic"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>