<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:text="@string/hint_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_songTitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView_songTitle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp">
            <TextView
                    android:text="@string/hint_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_artist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="italic"
            />
            <View
                    android:id="@+id/divider"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/hint_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_album"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textStyle="italic"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>