<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content">

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.8"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:id="@+id/constraintLayout2" app:layout_constraintBottom_toBottomOf="parent"
    >

        <TextView
                android:text="@string/hint_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView_artist"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold" android:layout_marginTop="16dp"
                android:textColor="@color/colorAccent"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_artist"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:id="@+id/linearLayout">
            <TextView
                    android:text="@string/textView_numberOfAlbums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_albums"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textStyle="italic"
            />
            <View
                    android:id="@+id/albums_tracks_divider"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/textView_numberOfTracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_tracks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" android:textStyle="italic"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/avatar_placeholder"
            android:id="@+id/imageView_artist" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2" app:layout_constraintDimensionRatio="1"
            android:layout_marginTop="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/artist_description"/>
    <View
            android:id="@+id/item_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>