<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SongDetailsActivity.SongDetailsActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView_bg" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_description"
            android:elevation="-10dp"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/constraintLayout_header"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView_songTitle"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:text="@string/hint_title"
                android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorAccent" android:textStyle="bold"
                android:fontFamily="@font/quicksand_medium" android:layout_marginTop="8dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/textView_songTitle"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:gravity="center_horizontal">
            <TextView
                    android:text="@string/hint_artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_artistName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
            <View
                    android:id="@+id/album_artist_divider"
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/hint_album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView_albumTitle"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/ConstraintLayout_lyrics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout_header"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/btn_edit"
            app:layout_constraintDimensionRatio="1">

        <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>

        <ImageView
                android:id="@+id/imageView6"
                android:layout_width="25dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textView_lyrics"
                app:srcCompat="@drawable/quote_left" android:layout_marginTop="-4dp"/>

        <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>

        <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@id/textView_lyrics"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:srcCompat="@drawable/quote_right" android:layout_marginBottom="-4dp"/>

        <TextView
                android:id="@+id/textView_lyrics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/large_text"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/textView_updatedAt"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/textView_updatedAt"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" android:textStyle="italic"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/btn_edit"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btn_edit"
            android:ellipsize="marquee"/>
    <Button
            android:text="Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_edit"
            style="@android:style/Widget.Material.Button.Colored" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>